--- a/public/token.html
+++ b/public/token.html
@@ -6,7 +6,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>JavaScript 社区</title>
-  <script src="https://cdn.bootcss.com/parse/2.1.0/parse.min.js"></script>
 </head>
 
 <body class="borderbox">
@@ -14,7 +13,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <script src="../dist/token.js"></script>
+  <script src="./token.js"></script>
 </body>
 
 </html>
