--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <script src="../dist/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
