--- a/public/token.html
+++ b/public/token.html
@@ -1,19 +1,22 @@
 <!-- sourced from https://raw.githubusercontent.com/reactjs/reactjs.org/master/static/html/single-file-example.html -->
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+      shrink-to-fit=no">
+    <title>JavaScript 社区</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>JavaScript 社区</title>
-</head>
-
-<body class="borderbox">
-  <div id="root"></div>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <script src="./token.js"></script>
-</body>
+  <body>
+    <div>saving session...</div>
+    <script>
+    const query = window.location.search
+    const arr = query.split('&')
+    const session = arr[0].substr(3)
+    window.localStorage.setItem('community-app-session', session)
+    window.location.href = '/'
+  </script>
+  </body>
 
 </html>
