--- a/public/post.html
+++ b/public/post.html
@@ -12,7 +12,7 @@
     <div>跳转..</div>
     <script>
     const path = window.location.pathname
-    const arr = query.split('/')
+    const arr = path.split('/')
     window.location.href = `/` + arr[2]
   </script>
   </body>
