--- a/public/post.html
+++ b/public/post.html
@@ -13,7 +13,7 @@
     <script>
     const path = window.location.pathname
     const arr = path.split('/')
-    window.location.href = `/` + arr[2]
+    window.location.href = `/?id=` + arr[2]
   </script>
   </body>
 </html>
