--- a/public/post.html
+++ b/public/post.html
@@ -11,6 +11,7 @@
   <body>
     <div>跳转..</div>
     <script>
+    // url: /post/xxx
     const path = window.location.pathname
     const arr = path.split('/')
     window.location.href = `/?id=` + arr[2]
