--- a/public/token.html
+++ b/public/token.html
@@ -11,6 +11,7 @@
   <body>
     <div>saving session...</div>
     <script>
+    // url: /token.html?s=xxx
     const query = window.location.search
     const arr = query.split('&')
     const session = arr[0].substr(3)
