--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>JavaScript 社区</title>
 </head>
 
-<body>
+<body style="background-image: url('http://audio.xugaoyang.com/background.png');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
   <div id="root"></div>
   <noscript>
     You need to enable JavaScript to run this app.
