--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>JavaScript 社区</title>
+  <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdn.bootcss.com/react/16.8.6/umd/react.development.js"></script>
+  <script src="https://cdn.bootcss.com/react-dom/16.8.6/umd/react-dom.development.js"></script>
+  <script src="https://cdn.bootcss.com/react-router/5.0.0/react-router.min.js"></script>
+  <script src="https://cdn.bootcss.com/react-router-dom/5.0.0/react-router-dom.min.js"></script>
+  <script src="https://cdn.bootcss.com/prop-types/15.6.2/prop-types.min.js"></script>
+  <script src="https://cdn.bootcss.com/redux/4.0.1/redux.min.js"></script>
+  <script src="https://cdn.bootcss.com/react-redux/7.0.3/react-redux.min.js"></script>
+  <script src="https://cdn.bootcss.com/antd/3.19.0/antd.min.js"></script>
+  <script src="https://cdn.bootcss.com/parse/2.1.0/parse.min.js"></script>
+  <script src="https://cdn.bootcss.com/ramda/0.26.1/ramda.min.js"></script>
+  <script src="https://cdn.bootcss.com/react-markdown/4.0.8/react-markdown.js"></script>
+
+  <link href="https://cdn.bootcss.com/antd/3.19.0/antd.min.css" rel="stylesheet">
 </head>
 
 <body style="background-image: url('http://audio.xugaoyang.com/background.png');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
@@ -13,7 +27,6 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <script src="./main.js"></script>
 </body>
 
 </html>
